<resources>
    <string name="app_name">PolishNewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wiadomo_ci">Wiadomości</string>
    <string name="szukaj">Szukaj</string>
    <string name="ulubione">Ulubione</string>
    <string name="po_cz">Połącz</string>
    <string name="brak_wynik_w">Brak wyników</string>
    <string name="image">image</string>
    <string name="gradient">gradient</string>
    <string name="bookmark">bookmark</string>
    <string name="blad">Nie można odświeżyć: %s</string>
    <string name="nieznany_blad">Nieznany błąd</string>
    <string name="od_wie">Odśwież</string>
</resources>