<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/background"
    app:cardCornerRadius="30dp"
    app:cardElevation="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/articleImageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/no_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="@id/articleImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/gradient" />

        <ImageView
            android:id="@+id/favoriteImageView"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="12dp"
            android:src="@drawable/ic_favorite_unselected"
            app:layout_constraintBottom_toBottomOf="@id/articleImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/teal_200"
            android:contentDescription="@string/bookmark" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/favoriteImageView"
            app:layout_constraintBottom_toBottomOf="@id/articleImageView"
            android:textSize="16sp"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintTop_toTopOf="@+id/favoriteImageView"
            tools:text="Rosja zawiesza udział w umowie zbożowej. Jest komentarz Erdogana"
            android:textColor="@color/teal_200"
            android:layout_margin="12dp"/>

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="12dp"
            android:textColor="@color/teal_200"
            app:layout_constraintTop_toBottomOf="@id/articleImageView"
            tools:text="Notowania ropy naftowej rozpoczęły bieżący tydzień, i jednocześnie ostatnią sesję października, od zniżki. Cena ropy gatunku Brent oscyluje w rejonie 92 USD za baryłkę, a notowania amerykańskiej ropy WTI poruszają się w okolicach 86 USD za baryłkę." />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>